crates/unsoundness_checker/tests/snapshots/invalid_overload_implementation/markdown_test__snippet_01.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> snippet_01.py:3:1
  |
1 | from typing import overload
2 |
3 | @overload
  | ^^^^^^^^^
4 | def foo(x: int) -> str: ...
5 | @overload
  |
info: rule `typing-overload-used` was selected in the configuration file

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> snippet_01.py:5:1
  |
3 | @overload
4 | def foo(x: int) -> str: ...
5 | @overload
  | ^^^^^^^^^
6 | def foo(x: str) -> int: ...
7 | def foo(x: int | str) -> str | int:
  |
info: rule `typing-overload-used` was selected in the configuration file
